improvements to font pairings and fixed footer alignment

--- a/src/components/tailwind.css
+++ b/src/components/tailwind.css
@@ -12,7 +12,7 @@
     font-family: 'lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .curvy{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'vollkorn', Georgia, 'Times New Roman', Times, serif;
 }
 .heaviest{
     font-weight: 700
@@ -21,7 +21,7 @@
     font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif
 }
 .highlight{
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 40%, #f6ad55 40%);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 40%, #c6f6d5 40%);
 }
 #SideMenu{
     /* transform: translateX(100%); */
